fix: implemented authguard for login frontend